package type change from jar to war

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <groupId>com.example</groupId>
   <artifactId>demo</artifactId>
   <version>1.0</version>
-  <packaging>jar</packaging>
+  <packaging>war</packaging>
 
   <name>demo Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
